# freeseer

./: .travis.yml  CMakeLists.txt
src/: application.qml  freeseer-config  freeseer-record  freeseer-reporteditor  freeseer-talkeditor  main.cpp  mediainterfaces.h  multimedia.cpp  multimedia.h  recorder.h  requirements.txt
src/freeseer/: settings.py
src/freeseer/framework/: database.py  plugin.py
src/freeseer/framework/config/: __init__.py  core.py  exceptions.py  options.py  profile.py
src/freeseer/framework/config/persist/: __init__.py  configparser.py  jsonconfig.py  jsonmanager.py  parserconfig.py
src/freeseer/frontend/configtool/: configtool.py
src/freeseer/frontend/record/: RecordingController.py  record.py
src/freeseer/frontend/reporteditor/: reporteditor.py
src/freeseer/frontend/talkeditor/: talkeditor.py
src/freeseer/tests/framework/: test_config.py  test_database.py  test_multimedia.py  test_plugins.py
src/freeseer/tests/frontend/configtool/: test_config_tool.py
src/freeseer/tests/frontend/record/: test_record.py
src/freeseer/tests/frontend/reporteditor/: test_reporteditor.py
